--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -5,6 +5,11 @@ output:
     toc: FALSE
 ---
 
+#About Me
 
-Add some text and a figure describing myself.
+### My name is Wade!
+
+![Wade Fields - Photo](/photo_head_shot.jpg)
+
+I have been using R for a couple years. I'm mostly self taught and looking forward to completing a structured course. 
 
