--- a/aboutme.Rmd
+++ b/aboutme.Rmd
@@ -5,9 +5,10 @@ output:
     toc: FALSE
 ---
 
+
 ## My name is Wade!
 
-<img src="http://wadefields.me/WADEFIELDS-MADA-portfolio/photo_head_shot.jpg" width="45" height="45") />
+![Wade Fields](photo_head_shot.jpg)
 
 I have been using R for a couple years. I'm mostly self taught and looking forward to completing a structured course. 
 
